[gd_scene load_steps=3 format=3 uid="uid://c0pm8x4sewfic"]

[ext_resource type="Script" path="res://scripts/lobby_ui.gd" id="1_mpjhf"]
[ext_resource type="Theme" uid="uid://bmq24vi5uw0mq" path="res://assets/themes/default_theme.tres" id="1_pjmqm"]

[node name="lobby_UI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_mpjhf")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(430, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pjmqm")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ip_label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("1_pjmqm")
text = "Adress"

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_pjmqm")
theme_override_constants/separation = 90

[node name="name_label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("1_pjmqm")
text = "Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ip-adress" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_pjmqm")
text = "127.0.0.1"
placeholder_text = " IP adress "
alignment = 1
expand_to_text_length = true

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_pjmqm")
theme_override_constants/separation = 10

[node name="name" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_pjmqm")
text = "Player 1"
placeholder_text = "name"
alignment = 1
expand_to_text_length = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="port_cb" type="CheckBox" parent="Panel/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("1_pjmqm")
text = "Port"

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer4"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 120

[node name="port" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "8080"
placeholder_text = "Port"
alignment = 1
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="host" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_pjmqm")
text = "Host"

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_pjmqm")
theme_override_constants/separation = 150

[node name="join" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_pjmqm")
text = "Join"

[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer4/port_cb" to="." method="_on_port_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/join" to="." method="_on_join_pressed"]
